--- a/css/new.css
+++ b/css/new.css
@@ -109,11 +109,28 @@ button:focus {
     font-weight: 300;
     color: #faebd7;
     z-index: 4;
+    
   }
+
+  #order_label{
+    
+    margin-bottom: 20%;
+
+  }
+
+
+  #order_label:hover{
+    
+    margin-bottom: 5%;
+
+  }
+
   span:hover {
     color: #ff7c02;
     font-weight: 500;
     font-size: 2.2vw;
+    margin-top: 5px;
+    
   }
   
   a {
