--- a/tickets/css/bootstrap.css
+++ b/tickets/css/bootstrap.css
@@ -9,7 +9,7 @@
   --indigo: #6610f2;
   --purple: #6f42c1;
   --pink: #e83e8c;
-  --red: #dc3545;
+  --red: #f60a22;
   --orange: #fd7e14;
   --yellow: #ffc107;
   --green: #28a745;
@@ -10653,7 +10653,7 @@ button.bg-dark:focus {
 }
 
 .text-red {
-  color: #dc3545 !important;
+  color: #f60a22 !important;
 }
 
 .text-yellow {
