--- a/tickets/css/test2.css
+++ b/tickets/css/test2.css
@@ -1322,3 +1322,67 @@ footer ul {
     border-color: var(--primary);
     background: var(--primary);
 }
+
+
+/*=============================================
+=                  test                   =
+=============================================*/
+
+
+a {
+  text-decoration: none; /* 1 */
+  color: inherit; /* 1 */
+  /*display: inline-block;  2 */
+  background-color: transparent; /* 3 */
+}
+
+
+a {
+    --cap-height: 0.826;
+    --font-size: 24px;
+    --baseline-multi: 2;
+    font-family: var(--font-family-secondary);
+    font-weight: var(--font-weight-400);
+    margin-bottom: calc(3 * var(--base-line-height) - var(--baseline-offset));
+    display: inline-block;
+    text-decoration: none;
+    color: #ea1821;
+    position: relative;
+    z-index: 1;
+}
+
+a::before {
+    content: '';
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #ea1821;
+    transform: scaleX(0.2);
+    transform-origin: bottom left;
+    transition: transform .5s ease-out;
+}
+
+a:hover::before {
+    transform: scaleX(0.95)
+}
+
+a span {
+    display: inline-block;
+    vertical-align: bottom;
+    position: relative;
+    top: 9px;
+    transform: translateX(14px);
+    opacity: 0;
+    transition: all .3s ease-out .3s;
+    width: 0.8rem
+}
+
+a:hover span {
+    transform: translateX(3px);
+    opacity: 1;
+}
+
+------------------------
+
