--- a/tickets/css/test2.css
+++ b/tickets/css/test2.css
@@ -1271,61 +1271,9 @@ footer ul {
 }
 
 
-/*=============================================
-=                   Project                   =
-=============================================*/
-
-/*** Project ***/
-.project-item a {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #FFFFFF;
-    background: rgba(0, 0, 0, .5);
-    border-radius: 6px;
-    opacity: 0;
-    transition: .5s;
-}
-
-.project-item:hover a {
-    opacity: 1;
-}
-
-.project-carousel .owl-dots {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 20px;
-}
-
-.project-carousel .owl-dot {
-    width: 35px;
-    height: 35px;
-    margin: 3px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid #DEE2E6;
-    border-radius: 35px;
-    transition: .5s;
-}
-
-.project-carousel .owl-dot:hover,
-.project-carousel .owl-dot.active {
-    color: #FFFFFF;
-    border-color: var(--primary);
-    background: var(--primary);
-}
-
 
 /*=============================================
-=                  test                   =
+=                  test1                   =
 =============================================*/
 
 
@@ -1385,4 +1333,67 @@ a:hover span {
 }
 
 ------------------------
+/*=============================================
+=                  test2                   =
+=============================================*/
 
+
+
+
+.carousel {
+  position: relative;
+}
+.carousel-item img {
+  object-fit: cover;
+}
+#carousel-thumbs {
+  background: rgba(255,255,255,.3);
+  bottom: 0;
+  left: 0;
+  padding: 0 50px;
+  right: 0;
+}
+#carousel-thumbs img {
+  border: 5px solid transparent;
+  cursor: pointer;
+}
+#carousel-thumbs img:hover {
+  border-color: rgba(255,255,255,.3);
+}
+#carousel-thumbs .selected img {
+  border-color: #fff;
+}
+.carousel-control-prev,
+.carousel-control-next {
+  width: 50px;
+}
+@media all and (max-width: 767px) {
+  .carousel-container #carousel-thumbs img {
+    border-width: 3px;
+  }
+}
+@media all and (min-width: 576px) {
+  .carousel-container #carousel-thumbs {
+    position: absolute;
+  }
+}
+@media all and (max-width: 576px) {
+  .carousel-container #carousel-thumbs {
+    background: #ccccce;
+  }
+}
+
+
+/*=============================================
+=                  test3                   =
+=============================================*/
+.thumbnail {margin-bottom:6px;}
+
+.carousel-control.left,.carousel-control.right{
+  background-image:none;
+  margin-top:10%;
+  width:5%;
+}
+.hidden {
+  display: none;
+}
