頁頭span字體修改成 RWd增加帶入的選擇時間

--- a/tickets/css/pay_fail.css
+++ b/tickets/css/pay_fail.css
@@ -248,23 +248,15 @@ button:focus {
       font-size: 3vw;
     }
   }
-  
-  @media screen only (min-width: 360px) {
-    .nav h1,
-    .slider h1 {
-      font-size: 8vw;
+   /* 在屏幕寬度小於 360 像素時應用的樣式 */
+    @media screen and (max-width: 359px) {
+        h1.loader span {
+        font-size: 8vw; /* 在小螢幕上的字體大小 */
+        letter-spacing: 0.2vw; /* 在小螢幕上的字母間距 */
+        }
     }
   
-    .nav h2,
-    .slider h2 {
-      font-size: 2vw;
-      letter-spacing: 0.2vw;
-    }
-  
-    .nav-tab {
-      font-size: 1.2vw;
-    }
-  }
+
   .background {
     position: absolute;
     height: 100vh;
