--- a/tickets/css/pay_fail.css
+++ b/tickets/css/pay_fail.css
@@ -2,7 +2,10 @@
 
 html, input { font-family: "Titillium Web", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
-p { margin: 16px 0; }
+p { 
+    margin: 16px 0; 
+
+  }
 
 h1 {
     margin:;
@@ -110,18 +113,7 @@ button:focus {
     text-align: center;
     padding: 5%;
   }
-  .slider {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width:  ;
-    position: relative;
-    background-color: #287897;
-    text-align: center;
-    padding: 0 2em;
-  }
+  
   
   .nav h1,
   .slider h1 {
@@ -148,19 +140,6 @@ button:focus {
     color: #faebd7;
     z-index: 4;
     
-  }
-
-  #order_label{
-    
-    margin-bottom: 20%;
-
-  }
-
-
-  #order_label:hover{
-    
-    margin-bottom: 5%;
-
   }
 
   span:hover {
@@ -248,7 +227,8 @@ button:focus {
       font-size: 3vw;
     }
   }
-   /* 在屏幕寬度小於 360 像素時應用的樣式 */
+
+    /* 在屏幕寬度小於 360 像素時應用的樣式 */
     @media screen and (max-width: 359px) {
         h1.loader span {
         font-size: 8vw; /* 在小螢幕上的字體大小 */
@@ -293,117 +273,13 @@ button:focus {
   .loader span:nth-child(6) {
     -webkit-animation-delay: 0.5s;
   }
-  .loader span:nth-child(7) {
-    -webkit-animation-delay: 0.6s;
-  }
-  .loader span:nth-child(8) {
-    -webkit-animation-delay: 0.7s;
-  }
-  .loader span:nth-child(9) {
-    -webkit-animation-delay: 0.8s;
-  }
-  
-  .loader span:nth-child(10) {
-    -webkit-animation-delay: 0.9s;
-  }
-  .loader span:nth-child(11) {
-    -webkit-animation-delay: 1s;
-  }
-  .loader span:nth-child(12) {
-    -webkit-animation-delay: 1.1s;
-  }
-  .loader span:nth-child(13) {
-    -webkit-animation-delay: 1.2s;
-  }
-  .loader span:nth-child(14) {
-    -webkit-animation-delay: 1.3s;
-  }
-  .loader span:nth-child(15) {
-    -webkit-animation-delay: 1.4s;
-  }
-  .loader span:nth-child(16) {
-    -webkit-animation-delay: 1.5s;
-  }
-  .loader span:nth-child(17) {
-    -webkit-animation-delay: 1.6s;
-  }
-  .loader span:nth-child(18) {
-    -webkit-animation-delay: 1.7s;
-  }
-  .loader span:nth-child(19) {
-    -webkit-animation-delay: 1.8s;
-  }
-  .loader span:nth-child(20) {
-    -webkit-animation-delay: 1.9s;
-  }
-  .loader span:nth-child(21) {
-    -webkit-animation-delay: 2s;
-  }
-  .loader span:nth-child(22) {
-    -webkit-animation-delay: 2.1s;
-  }
+
+ 
   
 
 /* NEW NAVEND */
 
 
-
-
-
-
-
-
-
-
-/*=============================================
-=                 FORM                =
-=============================================*/
-
-form {
-    border-radius: 0px;
-    /* background-image: <link rel=""herf="C:\Users\zaqzaq134\Desktop\第八講 Bootstrap Landing Page 排版\img\首頁.jpg"; */
-    /* background-image: url('/tickets/img/wood-591631_1280.jpg'); */
-    background-size: cover;
-    /* 固定背景 */
-    background-attachment: fixed;
-    background-position: center center;
-    /* filter: brightness(0.5); */
-    position: relative;
-}
-
-form>.container {
-    position: relative;
-    z-index: 2;
-    margin-top: 40%px;
-    margin-bottom: 20%px;
-    padding: 100; */
-}
-
-form>.container>.button{
-    margin-top: 40%px;
-    margin-bottom: 20%px;
-}
-
-/* 表格對齊方式 */
-
-/* 
-#planpicker, #datetimepicker  {
-    display: flex;
-    justify-content: space-between;
-} */
-
-#container {
-    display: block;
-    justify-content: space-between;
-}
-
-
-/* 如果你想进一步定制内部子元素的样式，可以添加以下规则 */
-#container>div {
-    /* 子元素的样式 */
-    display: flex;
-    justify-content: space-between;
-}
 
 
 /*=============================================
@@ -461,150 +337,6 @@ form>.container>.button{
 
 
 /*=============================================
-=                  Intro                      =
-=============================================*/
-.intro-box {
-  border-color: #000;
-  border-radius: 15%;
-  padding: 5%;
-  transition: all .5s ease-out;
-  /* padding: 15px 15px; */
-  text-align: center;
-}
-
-.intro-box:hover {
-  background: rgba(240, 217, 164, 0.788);
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, .25);
-  border-radius: 5%;
-  padding: 5%;
-}
-
-intro-box-card {
-  border-color: #000;
-  border-radius: 15%;
-  padding: 5%;
-  transition: all .5s ease-out;
-  /* padding: 15px 15px; */
-  text-align: center;
-
-  opacity: .7;
-  position: relative;
-  top: 10px;
-  transition: all .3s ease;
-}
-
-
-intro-box-card:hover {
-  background: rgba(255, 250, 99, 0.883);
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, .25);
-  border-radius: 10%;
-  padding: 5%;
-
-  width: 22px;
-
-  opacity: 1;
-  top: 0px;
-}
-
-
-.intro-box .icon {
-  opacity: .7;
-  position: relative;
-  top: 10px;
-  transition: all .3s ease;
-}
-
-.intro-box:hover .intro-line:hover {
-  width: 22px;
-}
-
-.intro-box:hover .icon {
-  opacity: 1;
-  top: 0px;
-}
-
-
-
-.intro-div{
-  background: #20bb94;
-}
-
-
-.input-container {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 1px;
-}
-
-.intro-line {
-  width: 20px;
-  height: 6px;
-  border-radius: 3px;
-  margin: 5px auto;
-  transition: all .5s ease;
-}
-.intro-line {
-  background: #20bb94;
-}
-
-
-/*=============================================
-=                   articleA                 =
-=============================================*/
-
-/* Table of contents */
-.bd-aside a {
-  padding: .1875rem .5rem;
-  margin-top: .125rem;
-  margin-left: .3125rem;
-  color: var(--bs-body-color);
-}
-
-.bd-aside a:hover,
-.bd-aside a:focus {
-  color: var(--bs-body-color);
-  background-color: rgba(121, 82, 179, .1);
-}
-
-.bd-aside .active {
-  font-weight: 600;
-  color: var(--bs-body-color);
-}
-
-.bd-aside .btn {
-  padding: .25rem .5rem;
-  font-weight: 600;
-  color: var(--bs-body-color);
-}
-
-.bd-aside .btn:hover,
-.bd-aside .btn:focus {
-  color: var(--bs-body-color);
-  background-color: rgba(121, 82, 179, .1);
-}
-
-.bd-aside .btn:focus {
-  box-shadow: 0 0 0 1px rgba(121, 82, 179, .7);
-}
-
-.bd-aside .btn::before {
-  width: 1.25em;
-  line-height: 0;
-  content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23ccc' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
-  transition: transform .35s ease;
-
-  /* rtl:raw:
-  transform: rotate(180deg) translateX(-2px);
-  */
-  transform-origin: .5em 50%;
-}
-
-.bd-aside .btn[aria-expanded="true"]::before {
-  transform: rotate(90deg)/* rtl:ignore */;
-}
-
-
-/*=============================================
 =                   Footer                    =
 =============================================*/
 
@@ -631,103 +363,10 @@ footer ul {
 }
 
 
-/*=============================================
-=                   contact(new)                   =
-=============================================*/
-
-form#contact {
-  margin-left: 0px;
-  position: relative;
-  z-index: 2;
-  /* background-image: url(/tickets/img/contact-form-bg.png); */
-  background-color: white;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
-  padding: 20px 20px;
-  border-radius: 10px;
-  margin-bottom: 35px;
-  margin-top: 35px;
-
-  border-top:    1px solid #999;
-  border-bottom: 1px solid #999;
-
-}
-
-
-form#contact input {
-  width: 100%;
-  height: 46px;
-  border-radius: 0px;
-  background-color: transparent;
-  border-bottom: 1px solid #9bdbf8;
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  outline: none;
-  font-size: 15px;
-  font-weight: 300;
-  color: #2a2a2a;
-  padding-top: 50px;
-  padding: 0px 0px;
-  margin-bottom: 35px;
-}
-
-
-
-form#contact input::placeholder {
-  color: #afafaf;
-}
-
-form#contact button {
-    display: inline-block;
-    background-color: #ff695f;
-    font-size: 15px;
-    font-weight: 400;
-    color: #fff;
-    text-transform: capitalize;
-    padding: 12px 25px;
-    border-radius: 23px;
-    letter-spacing: 0.25px;
-    border: none;
-    outline: none;
-    transition: all .3s;
-  }
-  
-  form#contact button:hover {
-    background-color: #03a4ed;
-  }
-  
-
-
-
-
-
 
 /*=============================================
 =                                  =
 =============================================*/
-
-
-#input {
-  width: 100%;
-  height: 46px;
-  border-radius: 0px;
-  background-color: transparent;
-  border-bottom: 1px solid #9bdbf8;
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  outline: none;
-  font-size: 20px;
-  font-weight: 300;
-  color: #2a2a2a88;
-  padding-top: 5px;
-  padding: 0px 0px;
-  margin-bottom: 3px;
-}
-
 .main_button {
     display: inline-block;
     background-color: #95e7f6;
@@ -737,38 +376,17 @@ form#contact button {
     text-transform: capitalize;
     padding: 12px 25px;
     border-radius: 23px;
-    letter-spacing: 0.25px;
+    letter-spacing: 0.5px;
     border: none;
     outline: none;
     transition: all .3s;
   }
   
   .main_buttons:hover {
-    background-color: #03a4ed;
+    background-color: #fdffff;
   }
 
-  .bg {
-    position: relative;
-    display: block;
-    padding: 0.75rem 1.25rem;
-    background-color: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.125);
-  }
-  
-  .bg:hover {
-    background-color: #03a4ed;
-  }
-  
-
-
-/*=============================================
-=                  #featuresSection                =
-=============================================*/
-
-#featuresSection {
-    
-    background-color: #172659f9;
-}
+ 
 /*=============================================
 =                  #inner                =
 =============================================*/
@@ -787,12 +405,19 @@ form#contact button {
     margin-bottom: 35px;
     margin-top: 35px;
 
-    
-  
-
   }
 
- 
+/*=============================================
+=                  #featuresSection                =
+=============================================*/
+
+#featuresSection {
+    
+    background-color: #172659f9;
+    border-radius: 15px;
+}
+
+
 
 /*=============================================
 =                  Glass cover                =
@@ -801,11 +426,11 @@ form#contact button {
 
  /* Glass cover */
  #featuresSection:before {         
-    background: -moz-linear-gradient(-100deg, rgba(255,255,255,0.09) 0%, rgba(255,255,255,0.1) 40%, rgba(10,14,10,0.09) 40%, rgba(255,255,255,0.2) 90%); /* FF3.6+ */
-    background: -webkit-linear-gradient(-60deg, rgba(255,255,255,0.09) 0%,rgba(255,255,255,0.1) 40%,rgba(10,14,10,0.09) 40%,rgba(255,255,255,0.2) 90%); /* Chrome10+,Safari5.1+ */            
-    background: -o-linear-gradient(-40deg, rgba(255,255,255,0.09) 0%, rgba(255,255,255,0.1) 40%, rgba(10,14,10,0.09) 40%, rgba(255,255,255,0.2) 90%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(-40deg, rgba(255,255,255,0.09) 0%, rgba(255,255,255,0.1) 40%, rgba(10,14,10,0.09) 40%, rgba(255,255,255,0.2) 90%); /* IE10+ */
-    background: linear-gradient(-220deg, rgba(255,255,255,0.09) 0%, rgba(255,255,255,0.1) 40%, rgba(10,14,10,0.09) 40%, rgba(255,255,255,0.2) 90%); /* W3C */
+    background: -moz-linear-gradient(-205deg, rgba(255,255,255,0.09) 0%, rgba(255,255,255,0.1) 45%, rgba(10,14,10,0.09) 40%, rgba(255,255,255,0.2) 90%); /* FF3.6+ */
+    background: -webkit-linear-gradient(-205deg, rgba(255,255,255,0.09) 0%,rgba(255,255,255,0.1) 45%,rgba(10,14,10,0.09) 40%,rgba(255,255,255,0.2) 90%); /* Chrome10+,Safari5.1+ */            
+    background: -o-linear-gradient(-205deg, rgba(255,255,255,0.09) 0%, rgba(255,255,255,0.1) 45%, rgba(10,14,10,0.09) 40%, rgba(255,255,255,0.2) 90%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(-205deg, rgba(255,255,255,0.09) 0%, rgba(255,255,255,0.1) 45%, rgba(10,14,10,0.09) 40%, rgba(255,255,255,0.2) 90%); /* IE10+ */
+    background: linear-gradient(-205deg, rgba(255,255,255,0.09) 50%, rgba(255,255,255,0.1) 45%, rgba(10,14,10,0.09) 40%, rgba(255,255,255,0.2) 90%); /* W3C */
 
     border-radius: 6px 6px 6px 6px;
     border-top: 3px solid rgba(255, 255, 255, 0.2);
@@ -818,8 +443,101 @@ form#contact button {
     margin: -10% -80% 0% -55%;
     position: absolute;
     width: 110%;
-ss
-}                           
+
+}  
+
+ /* 在屏幕寬度小於 360 像素時應用的樣式 */
+ @media screen and (max-width: 800px) {
+
+
+    #featuresSection:before {   
+        content: " ";
+        height: 120%;
+        margin: -20% 0% 0% -55%;
+        position: absolute;
+        width: 110%;
+    } 
+    .font-rwd h2 {
+       
+        font-size: 30px; /* 你的字体大小值 */
+    }
+    
+    .font-rwd h3 {
+        
+        font-size: 22px; /* 你的字体大小值 */
+    }
+
+
+    .main_button {
+        width: 120px;
+        display: inline-block;
+        background-color: #95e7f6;
+        /* font-size: 15px; */
+        /* font-weight: 400; */
+        color: #f33d3d;
+        text-transform: capitalize;
+        padding: 15px 15px;
+        border-radius: 23px;
+        letter-spacing: 0.5px;
+        border: none;
+        outline: none;
+        transition: all .3s;
+      }
+
+    .main_button h3{
+        font-size: 18px;
+        font-weight: 200;
+      }
+
+      .main_buttons:hover {
+        background-color: #03a4ed;
+      }
+
+}               
+
+ /* 在屏幕寬度小於 700 像素時應用的樣式 */
+ @media screen and (max-width: 700px) {
+
+    #inner  {
+
+         width: 110%;
+        margin-left: 0px;
+        z-index: 2;
+        /* background-image: url(/tickets/img/contact-form-bg.png); */
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+        
+        border-radius: 5px;
+        margin-bottom: 35px;
+        margin-top: 35px;
+    
+      }
+
+    #featuresSection:before {   
+        content: " ";
+        height: 115%;
+        margin: -18% 0% -0% -55%;
+        position: absolute;
+        width: 110%;
+    } 
+    .font-rwd h2 {
+       
+        font-size: 30px; /* 你的字体大小值 */
+    }
+    
+    .font-rwd h3 {
+        
+        font-size: 22px; /* 你的字体大小值 */
+    }
+
+    .main_button h3{
+        font-size: 18px;
+        font-weight: 100;
+      }
+
+}               
 
 
 
