--- a/tickets/css/new.css
+++ b/tickets/css/new.css
@@ -1323,3 +1323,139 @@ body {
   color: #d24d57;
 }
 
+/* 在屏幕寬度小於 540 像素時應用的樣式 */
+@media screen and (max-width: 540px) {
+
+  .datepicker {
+    width: 300px;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
+    margin: 50px auto;
+    overflow: hidden;
+  }
+  .datepicker .datepicker-header {
+    height: 16rem;
+    background-image: url('../img/小三通/初日號-卡通圖.png');
+    background-position: center center;
+    background-size: 100%;
+  }
+  .datepicker .ui-datepicker-inline {
+    width: 58vw;
+    padding: 15px;
+    /* margin-left: 5%; */
+  }
+  .datepicker .ui-datepicker-header {
+    text-align: center;
+    padding-bottom: 1em;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+  }
+  .datepicker .ui-datepicker-header .ui-datepicker-prev, .datepicker .ui-datepicker-header .ui-datepicker-next {
+    display: inline;
+    float: left;
+    cursor: pointer;
+    font-size: 1.4em;
+    padding: 0 10px;
+    margin-top: -10px;
+    color: #ccc;
+  }
+  .datepicker .ui-datepicker-header .ui-datepicker-next {
+    float: right;
+  }
+  .datepicker .ui-datepicker-calendar {
+    width: 100%;
+    text-align: center;
+  }
+  .datepicker .ui-datepicker-calendar thead {
+    color: #ccc;
+  }
+  .datepicker .ui-datepicker-calendar tr th, .datepicker .ui-datepicker-calendar tr td {
+    padding-bottom: 0.5em;
+  }
+  .datepicker .ui-datepicker-calendar a {
+    color: #444;
+    text-decoration: none;
+    display: block;
+    margin: 0 auto;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    border-radius: 50%;
+    border: 1px solid transparent;
+    cursor: pointer;
+  }
+
+
+}
+
+/* 在屏幕寬度小於 700 像素時應用的樣式 */
+@media screen and (max-width: 430px) {
+  .datepicker {
+    width: 280px;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
+    margin: 50px auto;
+    overflow: hidden;
+  }
+  .datepicker .datepicker-header {
+    height: 14rem;
+    background-image: url('../img/小三通/初日號-卡通圖.png');
+    background-position: center center;
+    background-size: 100%;
+  }
+  .datepicker .ui-datepicker-inline {
+    width: 17rem;
+    padding: 30px 30px 0 0;
+    /* margin-left: 5%; */
+  }
+}
+
+/* 在屏幕寬度小於 360 像素時應用的樣式 */
+@media screen and (max-width: 380px) {
+
+  .datepicker {
+    width: 230px;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
+    margin: 50px auto;
+    overflow: hidden;
+  }
+  .datepicker .datepicker-header {
+    height: 14rem;
+    background-image: url('../img/小三通/初日號-卡通圖.png');
+    background-position: center center;
+    background-size: 110%;
+  }
+  .ui-datepicker .ui-datepicker-title {
+    margin: 0 2.3em;
+    line-height: 1.8em;
+    text-align: center;
+  }
+  .datepicker .ui-datepicker-header {
+    text-align: center;
+    padding-bottom: 1em;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+  }
+  .datepicker .ui-datepicker-header .ui-datepicker-prev, .datepicker .ui-datepicker-header .ui-datepicker-next {
+    display: inline;
+    float: left;
+    cursor: pointer;
+    font-size: 1.4em;
+    padding: 0 10px;
+    margin-top: -10px;
+    color: #ccc;
+  }
+  .datepicker .ui-datepicker-header .ui-datepicker-next {
+    float: right;
+  }
+
+}
+
+/* 在屏幕寬度小於 700 像素時應用的樣式 */
+@media screen and (max-width: 700px) {
+  
+}
