--- a/tickets/css/refun.css
+++ b/tickets/css/refun.css
@@ -70,7 +70,7 @@ button:focus {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    /* width:  ; */
+    width:  ;
     position: relative;
     background-color: #287897;
     text-align: center;
@@ -339,7 +339,7 @@ form>.container {
     z-index: 2;
     margin-top: 40%px;
     margin-bottom: 20%px;
-    padding: 100; 
+    padding: 100; */
 }
 
 form>.container>.button{
@@ -355,7 +355,7 @@ form>.container>.button{
     justify-content: space-between;
 } */
 
-#container {
+#container, {
     display: block;
     justify-content: space-between;
 }
@@ -576,16 +576,18 @@ form>.container>.button{
     position: relative;
     z-index: 2;
 }
+#header>div{
 
+}
 
 /* 動畫 */
 
 @keyframes enter {
-  0%  {
+  0%,  {
     transform: translateX(-200%); /* 从左边进入并停在0位置 */
   }
-  50%{
-    transform: translateX(0); /* 暂停，元素停在0位置 */
+   {
+  50%  transform: translateX(0); /* 暂停，元素停在0位置 */
   }
 }
 
@@ -1196,396 +1198,17 @@ footer ul {
 
 
 /*=============================================
-=                   icon重疊                 =
+=                   mo                 =
 =============================================*/
 
-table ul {
-  list-style-type: decimal; /* 大寫羅馬數字 */
-  /* 或使用 lower-roman 來顯示小寫羅馬數字 */
+.ulclass{
+    padding: 0 2rem;
 }
 
-.decimal ul {
-  list-style-type: decimal; /* 大寫羅馬數字 */
-  /* 或使用 lower-roman 來顯示小寫羅馬數字 */
-}
-
-
-
-table.circle ul {
-  list-style-type: circle; /* 或者你想要的其他樣式 */
-  
-}
-
-table.circle tbody {
-  text-align: left;
- 
-}
-
-
-/*=============================================
-=                   輪播modal                =
-=============================================*/
-
-/* 調整小圖片的樣式 */
-.small-image {
-  cursor: pointer; /* 將光標設定為手型，表示可點擊 */
-  max-width: 100%;
-}
-
-/* 調整大圖片的樣式 */
-.large-image {
-  max-width: 100%;
-  height: auto; /* 維持原始寬高比例 */
-}
-
-/* 調整模態框大小 */
-.modal-lg {
-  max-width: 80%; /* 可根據需要調整模態框的大小 */
-}
 
 /*=============================================
 =                   日曆            =
 =============================================*/
-*, *:before, *:after {
-  box-sizing: border-box;
-}
-html {
-  font-size: 18px;
-}
-body {
-  font-family: "Roboto", sans-serif;
-  font-size: 1em;
-  line-height: 1.6;
-}
-.datepicker {
-  width: 400px;
-  background: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
-  margin: 50px auto;
-  overflow: hidden;
-}
-.datepicker .datepicker-header {
-  height: 22rem;
-  background-image: url('../img/小三通/初日號-卡通圖.png');
-  background-position: center center;
-  background-size: 100%;
-}
-.datepicker .ui-datepicker-inline {
-  width: 23rem;
-  padding: 30px;
-  /* margin-left: 5%; */
-}
-.datepicker .ui-datepicker-header {
-  text-align: center;
-  padding-bottom: 1em;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-}
-.datepicker .ui-datepicker-header .ui-datepicker-prev, .datepicker .ui-datepicker-header .ui-datepicker-next {
-  display: inline;
-  float: left;
-  cursor: pointer;
-  font-size: 1.4em;
-  padding: 0 10px;
-  margin-top: -10px;
-  color: #ccc;
-}
-.datepicker .ui-datepicker-header .ui-datepicker-next {
-  float: right;
-}
-.datepicker .ui-datepicker-calendar {
-  width: 100%;
-  text-align: center;
-}
-.datepicker .ui-datepicker-calendar thead {
-  color: #ccc;
-}
-.datepicker .ui-datepicker-calendar tr th, .datepicker .ui-datepicker-calendar tr td {
-  padding-bottom: 0.5em;
-}
-.datepicker .ui-datepicker-calendar a {
-  color: #444;
-  text-decoration: none;
-  display: block;
-  margin: 0 auto;
-  width: 35px;
-  height: 35px;
-  line-height: 35px;
-  border-radius: 50%;
-  border: 1px solid transparent;
-  cursor: pointer;
-}
-.datepicker .ui-datepicker-calendar .ui-state-highlight {
-  border-color: #d24d57;
-  color: #d24d57;
-}
-
-/* 在屏幕寬度小於 540 像素時應用的樣式 */
-@media screen and (max-width: 540px) {
-
-  .datepicker {
-    width: 300px;
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
-    margin: 50px auto;
-    overflow: hidden;
-  }
-  .datepicker .datepicker-header {
-    height: 16rem;
-    background-image: url('../img/小三通/初日號-卡通圖.png');
-    background-position: center center;
-    background-size: 100%;
-  }
-  .datepicker .ui-datepicker-inline {
-    width: 58vw;
-    padding: 15px;
-    /* margin-left: 5%; */
-  }
-  .datepicker .ui-datepicker-header {
-    text-align: center;
-    padding-bottom: 1em;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-  }
-  .datepicker .ui-datepicker-header .ui-datepicker-prev, .datepicker .ui-datepicker-header .ui-datepicker-next {
-    display: inline;
-    float: left;
-    cursor: pointer;
-    font-size: 1.4em;
-    padding: 0 10px;
-    margin-top: -10px;
-    color: #ccc;
-  }
-  .datepicker .ui-datepicker-header .ui-datepicker-next {
-    float: right;
-  }
-  .datepicker .ui-datepicker-calendar {
-    width: 100%;
-    text-align: center;
-  }
-  .datepicker .ui-datepicker-calendar thead {
-    color: #ccc;
-  }
-  .datepicker .ui-datepicker-calendar tr th, .datepicker .ui-datepicker-calendar tr td {
-    padding-bottom: 0.5em;
-  }
-  .datepicker .ui-datepicker-calendar a {
-    color: #444;
-    text-decoration: none;
-    display: block;
-    margin: 0 auto;
-    width: 35px;
-    height: 35px;
-    line-height: 35px;
-    border-radius: 50%;
-    border: 1px solid transparent;
-    cursor: pointer;
-  }
-
-
-}
-
-/* 在屏幕寬度小於 700 像素時應用的樣式 */
-@media screen and (max-width: 430px) {
-  .datepicker {
-    width: 280px;
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
-    margin: 50px auto;
-    overflow: hidden;
-  }
-  .datepicker .datepicker-header {
-    height: 14rem;
-    background-image: url('../img/小三通/初日號-卡通圖.png');
-    background-position: center center;
-    background-size: 100%;
-  }
-  .datepicker .ui-datepicker-inline {
-    width: 17rem;
-    padding: 30px 30px 0 0;
-    /* margin-left: 5%; */
-  }
-}
-
-/* 在屏幕寬度小於 360 像素時應用的樣式 */
-@media screen and (max-width: 380px) {
-
-  .datepicker {
-    width: 230px;
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
-    margin: 50px auto;
-    overflow: hidden;
-  }
-  .datepicker .datepicker-header {
-    height: 14rem;
-    background-image: url('../img/小三通/初日號-卡通圖.png');
-    background-position: center center;
-    background-size: 110%;
-  }
-  .ui-datepicker .ui-datepicker-title {
-    margin: 0 2.3em;
-    line-height: 1.8em;
-    text-align: center;
-  }
-  .datepicker .ui-datepicker-header {
-    text-align: center;
-    padding-bottom: 1em;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-  }
-  .datepicker .ui-datepicker-header .ui-datepicker-prev, .datepicker .ui-datepicker-header .ui-datepicker-next {
-    display: inline;
-    float: left;
-    cursor: pointer;
-    font-size: 1.4em;
-    padding: 0 10px;
-    margin-top: -10px;
-    color: #ccc;
-  }
-  .datepicker .ui-datepicker-header .ui-datepicker-next {
-    float: right;
-  }
-
-}
-
-/* 在屏幕寬度小於 700 像素時應用的樣式 */
-@media screen and (max-width: 700px) {
-  
-}
 
 
 
-
-
-
-
-
-
-
-/*=============================================
-=               tooltip-container           =
-=============================================*/
-
-.tooltip-container {
-  margin: 60px auto;
-  padding-top: 0px;
-  position: relative;
-  width: 160px;
-}
-.tooltip-container .tooltip-content p {
-  color: red;
-}
-.tooltip-container .tooltip-btn {
-  display: block;
-  margin: 0 auto;
-  color: #fb5656;
-  width: 160px;
-  height: 50px;
-  line-height: 50px;
-  background: #fffefe;
-  font-size: 22px;
-  border: 0;
-  border-radius: 3px;
-  cursor: pointer;
-  text-align: center;
-  box-shadow: 0 5px 5px -5px #333;
-  transition: background 0.3s ease-in;
-}
-.tooltip-container .tooltip-btn:hover {
-  background: #ffe9e9;
-}
-.tooltip-container .tooltip-btn.tooltip-toggle:hover ~ .tooltip-content {
-  opacity: 1;
-  background-color: #fff;
-  max-width: 400px;
-  width: 200px;
-  min-height: 70px;
-  padding: 0px 20px;
-  position: absolute;
-  left: calc(50% - 100px);
-  top: 145%;
-  border-radius: 4px;
-  z-index: 999;
-  pointer-events: auto;
-  cursor: auto;
-  visibility: visible;
-  overflow: visible;
-  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.6);
-}
-@media (max-width: 400px) {
-  .tooltip-container .tooltip-btn.tooltip-toggle:hover ~ .tooltip-content {
-    left: 0;
- }
-}
-.tooltip-container .tooltip-btn.tooltip-toggle:hover ~ .tooltip-content:before {
-  content: "";
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 0 10px 10px 10px;
-  border-color: transparent transparent #fff transparent;
-  position: absolute;
-  top: -10px;
-  left: 30px;
-}
-.tooltip-container .tooltip-content, .tooltip-container .tooltip-backdrop {
-  height: 0;
-  width: 0;
-  opacity: 0;
-  visibility: hidden;
-  overflow: hidden;
-  transition: opacity 0.2s ease-in;
-}
-.tooltip-container #tooltip-toggle {
-  display: none;
-}
-.tooltip-container #tooltip-toggle.active ~ .tooltip-backdrop, .tooltip-container #tooltip-toggle:checked ~ .tooltip-backdrop {
-  background-color: transparent;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 9;
-  visibility: visible;
-  opacity: 1;
-  transition: opacity 0.2s ease-in;
-}
-.tooltip-container #tooltip-toggle.active ~ .tooltip-content, .tooltip-container #tooltip-toggle:checked ~ .tooltip-content {
-  opacity: 1;
-  background-color: #fff;
-  max-width: 400px;
-  width: 200px;
-  min-height: 70px;
-  padding: 0px 20px;
-  position: absolute;
-  left: calc(50% - 100px);
-  top: 145%;
-  border-radius: 4px;
-  z-index: 999;
-  pointer-events: auto;
-  visibility: visible;
-  overflow: visible;
-  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.6);
-}
-@media (max-width: 400px) {
-  .tooltip-container #tooltip-toggle.active ~ .tooltip-content, .tooltip-container #tooltip-toggle:checked ~ .tooltip-content {
-    left: 0;
- }
-}
-.tooltip-container #tooltip-toggle.active ~ .tooltip-content:before, .tooltip-container #tooltip-toggle:checked ~ .tooltip-content:before {
-  content: "";
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 0 10px 10px 10px;
-  border-color: transparent transparent #fff transparent;
-  position: absolute;
-  top: -10px;
-  left: 30px;
-}
