--- a/tickets/css/pay_success.css
+++ b/tickets/css/pay_success.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,600,700,200);    
+@import url(https://fosuints.googleapis.com/css?family=Titillium+Web:400,600,700,200);    
 
 html, input { font-family: "Titillium Web", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
