--- a/tickets/css/form.css
+++ b/tickets/css/form.css
@@ -19,10 +19,11 @@
 	 color: #179b77;
 }
  .form {
-	 background: rgba(19, 35, 47, .9);
+	 /* background: rgb(168, 183, 219); */
+	 background: rgb(250, 250, 250);
 	 padding: 40px;
 	 max-width: 600px;
-	 margin: 40px auto;
+	 margin: 50px auto;
 	 border-radius: 4px;
 	 box-shadow: 0 4px 10px 4px rgba(19, 35, 47, .3);
 }
@@ -46,14 +47,14 @@
 
  .tab-group li a {
 	 /* display: block; */
-     display: contents;
+     display: inline-block;
 	 text-decoration: none;
-	 padding: 15px;
+	 padding: 10px;
 	 background: rgba(160, 179, 176, .25);
 	 color: #a0b3b0;
 	 font-size: 20px;
 	 float: left;
-	 width: 50%;
+	 width: 33%;
 	 text-align: center;
 	 cursor: pointer;
 	 transition: 0.5s ease;
@@ -71,15 +72,16 @@
 }
  h1 {
 	 text-align: center;
-	 color: #fff;
-	 font-weight: 300;
-	 margin: 0 0 40px;
+	 color: #1ab188;
+	 font-weight: 550;
+	 font-size: 2rem;
+	 margin: 0 0 30px;
 }
  label {
 	 position: absolute;
 	 transform: translateY(6px);
 	 left: 13px;
-	 color: rgba(255, 255, 255, .5);
+	 color: rgba(13, 181, 117, 0.909);
 	 transition: all 0.25s ease;
 	 -webkit-backface-visibility: hidden;
 	 pointer-events: none;
@@ -90,9 +92,10 @@
 	 color: #1ab188;
 }
  label.active {
-	 transform: translateY(50px);
+	 transform: translateY(-20px);
 	 left: 2px;
 	 font-size: 14px;
+	 color: rgb(42, 91, 165);
 }
  label.active .req {
 	 opacity: 0;
@@ -109,7 +112,7 @@
 	 background: none;
 	 background-image: none;
 	 border: 1px solid #a0b3b0;
-	 color: #fff;
+	 color: #978b2d;
 	 border-radius: 0;
 	 transition: border-color 0.25s ease, box-shadow 0.25s ease;
 }
@@ -142,7 +145,7 @@
 	 border: 0;
 	 outline: none;
 	 border-radius: 0;
-	 padding: 15px 0;
+	 padding: 5px 0;
 	 font-size: 2rem;
 	 font-weight: 600;
 	 text-transform: uppercase;
