--- a/tickets/css/login.css
+++ b/tickets/css/login.css
@@ -2,7 +2,7 @@
 .login {
     position: relative;
     min-height: 80vh;
-    background-color: #e1e8ee;
+    background-color: #fcf1aa;
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -14,14 +14,14 @@
  .form-structor {
 	 background-color: #222;
 	 border-radius: 15px;
-	 height: 800px;
+	 height: 900px;
 	 width: 840px;
 	 position: relative;
 	 overflow: hidden;
 }
  .form-structor::after {
 	 content: '';
-	 opacity: 0.8;
+	 opacity: 0.95;
 	 position: absolute;
 	 top: 0;
 	 right: 0;
@@ -29,12 +29,16 @@
 	 left: 0;
 	 background-repeat: no-repeat;
 	 background-position: left bottom;
-	 background-size: 1250px;
+	 background-size: 1300px;
 	 background-image: url('/tickets/img/小三通/初日號-卡通圖.png');
 }
+
+
+/*                 signup                        */
  .form-structor .signup {
 	 position: absolute;
-	 top: 50%;
+	 top: 20%;
+	 bottom:50%;
 	 left: 50%;
 	 -webkit-transform: translate(-50%, -50%);
 	 width: 65%;
@@ -51,7 +55,7 @@
 	 visibility: hidden;
 }
  .form-structor .signup.slide-up .form-title {
-	 font-size: 1em;
+	 font-size: 2.5em;
 	 cursor: pointer;
 }
  .form-structor .signup.slide-up .form-title span {
@@ -118,13 +122,24 @@
 	 transition: all 0.3s ease;
 	 background-color: rgba(0, 0, 0, 0.8);
 }
+
+
+
+
+
+/*                 login                        */
  .form-structor .login {
 	 position: absolute;
-	 top: 20%;
+	 top: 15%;
 	 left: 0;
 	 right: 0;
 	 bottom: 0;
-	 background-color: #fff;
+	 /* background-color: #fff; */
+	 
+	 background-position: right bottom;
+	 background-size: 2800px;
+	 background-image: url('/tickets/img/小三通/初日號-卡通圖.png');
+
 	 z-index: 5;
 	 -webkit-transition: all 0.3s ease;
 }
@@ -141,6 +156,8 @@
 	 z-index: 4;
 	 -webkit-transition: all 0.3s ease;
 }
+
+
  .form-structor .login .center {
 	 position: absolute;
 	 top: calc(50% - 10%);
@@ -151,12 +168,13 @@
 	 -webkit-transition: all 0.3s ease;
 }
  .form-structor .login .center .form-title {
-	 color: #000;
-	 font-size: 1.7em;
+	color:rgba(83, 116, 249, 0.752);
+	 font-size: 2.5em;
 	 text-align: center;
 }
  .form-structor .login .center .form-title span {
-	 color: rgba(0, 0, 0, 0.4);
+	 color:rgb(253 126 47);
+	 font-size: 1.5vw;
 	 opacity: 0;
 	 visibility: hidden;
 	 -webkit-transition: all 0.3s ease;
