--- a/tickets/css/teamlist.css
+++ b/tickets/css/teamlist.css
@@ -287,6 +287,7 @@ button:focus {
 =============================================*/
 /* 加入背景圖片 */
 #header {
+    /* width: 100vh; */
     border-radius: 0px;
     background-color: #03dac6;
     margin-bottom: 10px;
@@ -303,17 +304,20 @@ button:focus {
     position: relative;
 }
 
-#header>.container {
-   filter: brightness(1.);
+#header > .container {
+    filter: brightness(1);
     position: relative;
     z-index: 2;
+    margin-bottom: 5vw;
 }
+
+
 
 
 /* 動畫 */
 
 @keyframes enter {
-  0%,  {
+  0%  {
     transform: translateX(-200%); /* 从左边进入并停在0位置 */
   }
    {
@@ -368,16 +372,52 @@ footer ul {
 =============================================*/
 
 #featuresSection {
-    
-    /* background-color: #172659f9; */
-    
-    background-color: #0457a0;
+    display: flex;
+    justify-content: center; /* 水平居中 */
+    align-items: center; /* 垂直居中 */
+
+    /* width: 2000px; */
+    margin: 0 auto; /* 将内容水平居中 */
+    background-color: #ffffff7c;
     border-color: #ffee00;
     border-width: 5px;
-    border-radius: 15px;
-    padding:1 5vw;
-    
+    padding: 1rem 2vw; /* 添加 padding，并使用有效的单位 */
 }
+
+/* @media (min-width: 1200px) {
+    #header > .container,
+    #header > .container-sm,
+    #header > .container-md,
+    #header > .container-lg,
+    #header > .container-xl {
+        max-width: 1140px;
+    }
+@media (min-width: 992px) {
+    #header > .container,
+    #header > .container-sm,
+    #header > .container-md,
+    #header > .container-lg,
+    #header > .container-xl {
+        max-width: 960px;
+    }
+@media (min-width: 768px) {
+    #header > .container,
+    #header > .container-sm,
+    #header > .container-md,
+    #header > .container-lg,
+    #header > .container-xl {
+        max-width: 720px;
+    }
+@media (min-width: 576px) {
+        #header > .container,
+        #header > .container-sm,
+        #header > .container-md,
+        #header > .container-lg,
+        #header > .container-xl {
+            max-width: 540px;
+        }
+}  */
+
 
 
 /*=============================================
@@ -565,7 +605,7 @@ button, a {
     align-items: center;
     padding-left: 12px;
     border-left: 2px solid #ddd;
-    border-right: 2px solid #ddd;
+    /* border-right: 2px solid #ddd; */
 
 }
 .profile-btn img {
@@ -635,7 +675,7 @@ button, a {
     border-radius: 32px;
     padding: 32px 32px 0 32px;
     overflow: hidden;
-    height: 100%;
+    height: 80%;
     display: flex;
     flex-direction: column;
 }
